@@ -19,10 +19,9 @@ import java.util.logging.Logger;
 /**
  * The Command Database.
  *
- * @author Brion Lang
- *  Date: 17 Jam 2009
+ * @author Brion Lang Date: 17 Jam 2009
  *
- *  Version 1.0.0
+ * Version 1.0.0
  */
 public class CommandDatabase {
 
@@ -30,8 +29,8 @@ public class CommandDatabase {
     private static final String scriptfolder = "Data/Scripts/";
     private static final String classfolder = "Commands";
 
-    /** 
-     * Basic Constructor.  Does nothing but calls super()
+    /**
+     * Basic Constructor. Does nothing but calls super()
      */
     public CommandDatabase() {
         super();
@@ -39,7 +38,7 @@ public class CommandDatabase {
 
     /**
      * Generates a new instance of a command name by its single paramiter
-     * 
+     *
      * @param name Name of the Command to generate
      * @return A new instance of the command whose name is equal to 'name' above
      * @throws Exception
@@ -55,7 +54,7 @@ public class CommandDatabase {
         if (loadable && command != null) {
             try {
                 File file = new File(scriptfolder);
-                ClassLoader loader = new URLClassLoader(new URL[] {file.toURI().toURL()});
+                ClassLoader loader = new URLClassLoader(new URL[]{file.toURI().toURL()});
                 Class cc = loader.loadClass("Commands." + command);
                 @SuppressWarnings(value = "unchecked")
                 Constructor cons = cc.getConstructor(MudCharacter.class);
@@ -81,7 +80,7 @@ public class CommandDatabase {
             throw new Exception("Unknown Command Script");
         }
 
-    /*Command com = generateCommand(name, null);
+        /*Command com = generateCommand(name, null);
     return com;*/
     }
 
@@ -105,7 +104,7 @@ public class CommandDatabase {
         if (loadable && command != null) {
             try {
                 File file = new File(scriptfolder);
-                ClassLoader loader = new URLClassLoader(new URL[] {file.toURI().toURL()});
+                ClassLoader loader = new URLClassLoader(new URL[]{file.toURI().toURL()});
                 Class cc = loader.loadClass("Commands." + command);
                 @SuppressWarnings(value = "unchecked")
                 Constructor cons = cc.getConstructor(MudCharacter.class);
@@ -132,9 +131,10 @@ public class CommandDatabase {
         }
     }
 
-    /** Give that player commands for that access level.
-     * 
-     *  Not yet implementd.
+    /**
+     * Give that player commands for that access level.
+     *
+     * Not yet implementd.
      *
      * @param player player to give access commands to
      * @param level access level of commands to issue player
@@ -144,9 +144,9 @@ public class CommandDatabase {
     }
 
     /**
-     * Loads the initial database from hardcode, NOT from 'scripts'.
-     * Calls on loadCommand(String) to due such.  Will load the whole directory,
-     * to include the "scriptable" files.
+     * Loads the initial database from hardcode, NOT from 'scripts'. Calls on
+     * loadCommand(String) to due such. Will load the whole directory, to
+     * include the "scriptable" files.
      */
     public void loadDB() {
         File fileDir = new File("Data/Scripts/" + classfolder);
@@ -182,7 +182,8 @@ public class CommandDatabase {
     }
 
     /**
-     * This wrapper method is use to ensure no duplicate commands are load into the List.
+     * This wrapper method is use to ensure no duplicate commands are load into
+     * the List.
      *
      * @param command
      */
@@ -193,8 +194,8 @@ public class CommandDatabase {
     }
 
     /**
-     * Will reload any script that is loadable.  That defaults only to 'scripted'
-     * commands or other user defined ones.  The 12 hard coded commands are
+     * Will reload any script that is loadable. That defaults only to 'scripted'
+     * commands or other user defined ones. The 12 hard coded commands are
      * non-loadable while the mud is still running.
      *
      * @param name Name of the command to reload
@@ -228,7 +229,7 @@ public class CommandDatabase {
     }
 
     /**
-     * Used to load a command from the "scripts".  It first checks if it is
+     * Used to load a command from the "scripts". It first checks if it is
      * loaded and returns if it is.
      *
      * @param name Name of Command to be load
@@ -259,7 +260,8 @@ public class CommandDatabase {
         return true;
     }
 
-    /** A test method use to relay the size of the currnt List of Commands
+    /**
+     * A test method use to relay the size of the currnt List of Commands
      *
      * @return size of database
      */
@@ -268,7 +270,7 @@ public class CommandDatabase {
     }
 
     /**
-     * Loads a command from binary code.  The directoy it looks in is binDir.
+     * Loads a command from binary code. The directoy it looks in is binDir.
      *
      * @param name Name of the command to load
      * @return Returns a new instance of the command
@@ -282,12 +284,12 @@ public class CommandDatabase {
         try {
             File classesDir = new File(scriptfolder);
             ClassLoader parentLoader = Command.class.getClassLoader();
-            URLClassLoader loader1 = new URLClassLoader(new URL[] {classesDir.toURI().toURL()}, parentLoader);
+            URLClassLoader loader1 = new URLClassLoader(new URL[]{classesDir.toURI().toURL()}, parentLoader);
             Class cls1 = loader1.loadClass(classfolder + "." + name);
             System.out.println("<------Now loading: " + cls1.getName());
             @SuppressWarnings(value = "unchecked")
-            Constructor cons = cls1.getConstructor(new Class[] {MudCharacter.class});
-            command = (Command) cons.newInstance(new Object[] {null});
+            Constructor cons = cls1.getConstructor(new Class[]{MudCharacter.class});
+            command = (Command) cons.newInstance(new Object[]{null});
             return command;
         } catch (Exception ex) {
             Logger.getLogger(CommandDatabase.class.getName()).log(Level.SEVERE, null, ex);
@@ -295,8 +297,9 @@ public class CommandDatabase {
         return command;
     }
 
-    /** Removes a command from the Mapping.  Checks to ensure the command is
-     * 'loadable' first before it removes the command.  Can only remove
+    /**
+     * Removes a command from the Mapping. Checks to ensure the command is
+     * 'loadable' first before it removes the command. Can only remove
      * non-loadable commands.
      */
     private void removeCommand(String name) {
@@ -313,16 +316,16 @@ public class CommandDatabase {
         Script script = null;
         name = name.toLowerCase();
         File file = new File(scriptfolder);
-        ClassLoader loader = new URLClassLoader(new URL[] {file.toURI().toURL()});
+        ClassLoader loader = new URLClassLoader(new URL[]{file.toURI().toURL()});
         // load class through new loader
         Class aClass = loader.loadClass(className + "." + name);
         if (className.equals("Commands")) {
             @SuppressWarnings("unchecked")
-            Constructor cons = aClass.getConstructor(new Class[] {MudCharacter.class});
-            script = (Script) cons.newInstance(new Object[] {null});
+            Constructor cons = aClass.getConstructor(new Class[]{MudCharacter.class});
+            script = (Script) cons.newInstance(new Object[]{null});
         } else {
-            script = (Script) aClass.newInstance();
+            script = (Script) aClass.getDeclaredConstructor().newInstance();
         }
-        return (Command)script;
+        return (Command) script;
     }
 }
